<resources>
    <string name="app_name">WATC</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="reporte">Tengo un problema</string>
    <string name="watc">WATC</string>
    <string name="pelea">Violencia física</string>
    <string name="Cancelar">Cancelar</string>
    <string name="inclusi_n">Inclusión</string>
    <string name="racismo">Racismo</string>
    <string name="g_nero">Violencia de genero</string>
    <string name="otro">Otro</string>
    <string name="inclusion">Inclusión</string>
    <string name="todo">TODO</string>
    <string name="logo">WATC</string>
    <string name="bienvenidos">Bienvenido</string>
    <string name="enviarmensaje">Enviar mensaje</string>
    <string name="enviar">Enviar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>